tests/parsing/invalid/parameter_defined_twice/bus.fbd
type my_mask(A, A) mask
